clang-format: add proc_schema.c

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -128,6 +128,7 @@ repos:
           ?lib/proc/proc_object\.c|
           ?lib/proc/proc_object_inspect\.c|
           ?lib/proc/proc_query\.c|
+          ?lib/proc/proc_schema\.c|
           ?lib/proc/proc_select\.cpp|
           ?lib/proc/proc_snippet\.c|
           ?lib/proc/proc_tokenize\.c|
