--- a/doc/files.am
+++ b/doc/files.am
@@ -64,6 +64,8 @@ absolute_source_files = \
 	$(top_srcdir)/doc/source/example/reference/commands/column_copy/move_column_setup.log \
 	$(top_srcdir)/doc/source/example/reference/commands/column_copy/to_table.log \
 	$(top_srcdir)/doc/source/example/reference/commands/column_copy/to_table_setup.log \
+	$(top_srcdir)/doc/source/example/reference/commands/column_create/generated_column_load.log \
+	$(top_srcdir)/doc/source/example/reference/commands/column_create/generated_column_schema.log \
 	$(top_srcdir)/doc/source/example/reference/commands/column_create/invalid_mode_scalar_load_initial.log \
 	$(top_srcdir)/doc/source/example/reference/commands/column_create/invalid_mode_scalar_load_update.log \
 	$(top_srcdir)/doc/source/example/reference/commands/column_create/invalid_mode_scalar_schema.log \
@@ -1385,6 +1387,8 @@ source_files_relative_from_doc_dir = \
 	source/example/reference/commands/column_copy/move_column_setup.log \
 	source/example/reference/commands/column_copy/to_table.log \
 	source/example/reference/commands/column_copy/to_table_setup.log \
+	source/example/reference/commands/column_create/generated_column_load.log \
+	source/example/reference/commands/column_create/generated_column_schema.log \
 	source/example/reference/commands/column_create/invalid_mode_scalar_load_initial.log \
 	source/example/reference/commands/column_create/invalid_mode_scalar_load_update.log \
 	source/example/reference/commands/column_create/invalid_mode_scalar_schema.log \
