clang-format: add include/groonga/cast.h

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,7 @@ repos:
           ?include/groonga/command_arguments\.hpp|
           ?include/groonga/dat\.h|
           ?include/groonga/db\.h|
+          ?include/groonga/cast\.h|
           ?include/groonga/distance\.h|
           ?include/groonga/error\.h|
           ?include/groonga/expr\.h|
