--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -93,6 +93,7 @@ repos:
           ?lib/grn_load\.h|
           ?lib/grn_mrb\.h|
           ?lib/grn_obj\.h|
+          ?lib/grn_output\.h|
           ?lib/grn_proc\.h|
           ?lib/grn_request_canceler\.h|
           ?lib/grn_request_timer\.h|
