doc: use Prettier for all .md documents
You need to use `<!-- prettier-ignore-start -->`/`<!--
prettier-ignore-end -->` explicitly when you use add a reference to a
section explicitly. For example:

    <!-- prettier-ignore-start -->
    (release-14-0-9)=
    ## Release 14.0.9 - 2024-09-27
    <!-- prettier-ignore-end -->

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -169,8 +169,7 @@ repos:
         files: >-
           (
           ?CMakePresets\.json|
-          ?doc/source/contribution/documentation/introduction\.md|
-          ?doc/source/install/cmake\.md|
+          ?doc/source/.*\.md|
           )
 
 exclude: "^vendor/.*"
