clang-format: add lib/index_column.c

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -111,6 +111,7 @@ repos:
           ?lib/h3\.c|
           ?lib/highlighter\.c|
           ?lib/ii\.c|
+          ?lib/index_column\.c|
           ?lib/language_model\.cpp|
           ?lib/load\.c|
           ?lib/normalizer\.c|
