packages rpm: follow arrowXXX-libs name change
It uses shared object version not major version for XXX.

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -61,7 +61,7 @@ on relational data model.
 Summary:	Runtime libraries for Groonga
 Group:		System Environment/Libraries
 License:	LGPLv2 and (MIT or GPLv2)
-Requires:	arrow@APACHE_ARROW_MAJOR_VERSION@-libs
+Requires:	arrow@APACHE_ARROW_SO_VERSION@-libs
 Requires:	libzstd
 Requires:	lz4
 %if ! %{is_amazon_linux}
