--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -27,8 +27,9 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
     File.read(cmake_yml)[/ref: apache-arrow-([\d.]+)/, 1]
   end
 
-  def detect_target_apache_arrow_major_version
-    detect_target_apache_arrow_version.split(".", 2)[0]
+  def detect_target_apache_arrow_so_version
+    major, minor, = detect_target_apache_arrow_version.split(".", 3)
+    (major.to_i * 100 + minor.to_i).to_s
   end
 
   def define_archive_task
@@ -90,8 +91,8 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
     case key
     when "APACHE_ARROW_VERSION"
       detect_target_apache_arrow_version
-    when "APACHE_ARROW_MAJOR_VERSION"
-      detect_target_apache_arrow_major_version
+    when "APACHE_ARROW_SO_VERSION"
+      detect_target_apache_arrow_so_version
     else
       super
     end
