doc package: update version info to 14.1.0 (2024-11-05)

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -461,6 +461,9 @@ exit 0
 %endif
 
 %changelog
+* Fri Nov 01 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.1.0-1
+- New upstream release.
+
 * Fri Sep 27 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.0.9-1
 - New upstream release.
 
