--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -33,6 +33,15 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ruby
+      - name: Prepare ccache
+        run: |
+          echo "CCACHE_DIR=${PWD}/ccache" >> ${GITHUB_ENV}
+      - name: Cache ccache
+        uses: actions/cache@v4
+        with:
+          path: ccache
+          key: cmake-linux-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
+          restore-keys: document-linux-ccache-
       - name: Install dependencies
         run: |
           ./setup.sh
@@ -40,9 +49,10 @@ jobs:
           (cd doc && bundle install)
       - name: Build documents
         run: |
+          ccache --show-stats --verbose --version || :
           cmake -S . -B /tmp/groonga.build --preset=doc
-          mkdir -p /tmp/groonga.dest
           DESTDIR=/tmp/groonga.dest cmake --build /tmp/groonga.build --target install
+          ccache --show-stats --verbose --version || :
       - name: Create archive
         run: |
           version=$(cat base_version)
@@ -51,17 +61,15 @@ jobs:
             -czf documents-${version}.tar.gz \
             -C /tmp/groonga.dest/usr/local/share \
             doc
-
       # Artifact
       - uses: actions/upload-artifact@v4
         with:
           name: documents
           path: documents-*.tar.gz
-
       # Release
       - name: Upload to release
         if: |
-          startsWith(github.ref, 'refs/tags/')
+          github.ref_type == 'tag'
         run: gh release upload ${{ github.ref_name }} documents-*.tar.gz
         env:
           GH_TOKEN: ${{ github.token }}
