--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ccache
-          key: cmake-linux-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
+          key: document-linux-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
           restore-keys: document-linux-ccache-
       - name: Install dependencies
         run: |
