cmake: Add USearch to dependent libraries
GitHub: GH-1820

Preparing to implement HNSW with USearch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1568,6 +1568,69 @@ else()
   set(GRN_WITH_LLAMA_CPP FALSE)
 endif()
 
+set(GRN_USEARCH_BUNDLED_VERSION "2.16.2")
+set(GRN_USEARCH_BUNDLED_SHA256
+    "f10f39397f45b664168c85b1b7facc7d6277ae1b92cb08b99aa2275cd7a4d24a")
+set(GRN_WITH_USEARCH
+    "auto"
+    CACHE STRING "Use USearch for ANN Search.")
+set(GRN_WITH_USEARCH_BUNDLED FALSE)
+if(NOT "${GRN_WITH_USEARCH}" STREQUAL "no")
+  if("${GRN_WITH_USEARCH}" STREQUAL "bundled")
+    set(usearch_FOUND FALSE)
+  else()
+    if("${GRN_WITH_USEARCH}" STREQUAL "system")
+      find_package(usearch REQUIRED)
+    else()
+      find_package(usearch)
+    endif()
+  endif()
+  if(usearch_FOUND)
+    set(GRN_WITH_USEARCH TRUE)
+    target_link_libraries(grn_dependencies INTERFACE usearch)
+    message(STATUS "usearch: system")
+  elseif(CMAKE_VERSION VERSION_GREATER_EQUAL "3.20")
+    # We need to use function to create a variable scope
+    function(grn_build_usearch)
+      set(USEARCH_SOURCE_BASE_NAME
+          "usearch-${GRN_USEARCH_BUNDLED_VERSION}.tar.gz")
+      set(USEARCH_SOURCE_LOCAL_PATH
+          "${CMAKE_CURRENT_SOURCE_DIR}/vendor/${USEARCH_SOURCE_BASE_NAME}")
+      if(EXISTS ${USEARCH_SOURCE_LOCAL_PATH})
+        set(USEARCH_SOURCE_URL ${USEARCH_SOURCE_LOCAL_PATH})
+      else()
+        set(USEARCH_SOURCE_URL
+            "https://github.com/unum-cloud/usearch/archive/refs/tags")
+        string(APPEND USEARCH_SOURCE_URL
+               "/v${GRN_USEARCH_BUNDLED_VERSION}.tar.gz")
+      endif()
+      fetchcontent_declare(
+        usearch
+        ${GRN_FETCH_CONTENT_COMMON_OPTIONS}
+        URL ${USEARCH_SOURCE_URL}
+        URL_HASH "SHA256=${GRN_USEARCH_BUNDLED_SHA256}")
+      grn_prepare_fetchcontent()
+      set(USEARCH_USE_FP16LIB OFF)
+      fetchcontent_makeavailable(usearch)
+      if(CMAKE_VERSION VERSION_LESS 3.28)
+        set_property(DIRECTORY ${usearch_SOURCE_DIR} PROPERTY EXCLUDE_FROM_ALL
+                                                              TRUE)
+      endif()
+      install(FILES "${usearch_SOURCE_DIR}/LICENSE"
+                    "${usearch_SOURCE_DIR}/README.md"
+              DESTINATION "${GRN_DATA_DIR}/usearch")
+    endfunction()
+    grn_build_usearch()
+    target_link_libraries(grn_dependencies INTERFACE usearch)
+    set(GRN_WITH_USEARCH_BUNDLED TRUE)
+    message(STATUS "usearch: bundled")
+  else()
+    set(GRN_WITH_USEARCH FALSE)
+  endif()
+else()
+  set(GRN_WITH_USEARCH FALSE)
+endif()
+
 find_program(
   RUBY
   NAMES "ruby"
