--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -186,9 +186,9 @@ if(GRN_WITH_MESSAGE_PACK)
     target_link_libraries(libgroonga INTERFACE Groonga::msgpackc)
   endif()
 endif()
-target_link_libraries(libgroonga PUBLIC Threads::Threads ${CMAKE_DL_LIBS})
+target_link_libraries(libgroonga PRIVATE Threads::Threads ${CMAKE_DL_LIBS})
 if(WIN32)
-  target_link_libraries(libgroonga PUBLIC ws2_32.lib)
+  target_link_libraries(libgroonga PRIVATE ws2_32.lib)
 endif()
 
 if(GRN_WITH_MRUBY)
