--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -472,11 +472,13 @@ endif()
 check_struct_has_member("struct tm" "tm_gmtoff" "time.h"
                         HAVE_STRUCT_TM_TM_GMTOFF)
 
-find_package(Threads REQUIRED)
-if(WIN32)
-  set(HAVE_PTHREAD_H FALSE)
-else()
-  set(HAVE_PTHREAD_H ${CMAKE_USE_PTHREADS_INIT})
+if(NOT WASI)
+  find_package(Threads REQUIRED)
+  if(WIN32)
+    set(HAVE_PTHREAD_H FALSE)
+  else()
+    set(HAVE_PTHREAD_H ${CMAKE_USE_PTHREADS_INIT})
+  endif()
 endif()
 
 option(GRN_WITH_NFKC "use NFKC based UTF8 normalization." ON)
