ci setup macos: add workaround for pkg-config formula

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -134,5 +134,10 @@ jobs:
           submodules: recursive
       - name: Setup
         run: |
+          # Workaround. pkg-config formula is deprecated but still
+          # installed in GitHub Actions runner. We can remove this
+          # when GitHub Actions runner doesn't include pkg-config
+          # formula by default.
+          brew uninstall pkg-config || :
           ./setup.sh
           ./build.sh ./ /tmp/build /tmp/local
