cmake windows: remove garbage "PRIVATE"

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,7 +25,7 @@ if(GRN_WITH_LIBEDIT)
   target_link_libraries(groonga Groonga::libedit)
 endif()
 if(WIN32)
-  target_link_libraries(groonga PRIVATE ws2_32.lib)
+  target_link_libraries(groonga ws2_32.lib)
 endif()
 install(TARGETS groonga DESTINATION ${BINDIR})
 if(MSVC)
