ci macos: ensure uninstalling pkg-config

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -366,6 +366,7 @@ jobs:
           # when GitHub Actions runner doesn't include pkg-config
           # formula by default.
           brew uninstall pkg-config || :
+          brew uninstall pkg-config@0.29.2 || :
           ./setup.sh
       - name: Prepare ccache
         run: |
