--- a/.github/workflows/autotools.yml
+++ b/.github/workflows/autotools.yml
@@ -190,6 +190,12 @@ jobs:
           submodules: recursive
       - name: Install packages
         run: |
+          # Workaround. pkg-config formula is deprecated but still
+          # installed in GitHub Actions runner. We can remove this
+          # when GitHub Actions runner doesn't include pkg-config
+          # formula by default.
+          brew uninstall pkg-config || :
+          brew uninstall pkg-config@0.29.2 || :
           ./setup.sh
       - name: Prepare ccache
         run: |
