--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
           ?include/groonga/operator\.h|
           ?include/groonga/output\.h|
           ?include/groonga/pat\.h|
+          ?include/groonga/portability\.h|
           ?include/groonga/proc\.h|
           ?include/groonga/request_canceler\.h|
           ?include/groonga/table\.h|
