Add header file to c_sources.am

--- a/lib/c_sources.am
+++ b/lib/c_sources.am
@@ -69,6 +69,7 @@ libgroonga_c_sources =				\
 	grn_output_columns.h			\
 	grn_pat.h				\
 	grn_plugin.h				\
+	grn_portability.h				\
 	grn_posting.h				\
 	grn_proc.h				\
 	grn_progress.h				\
