Revert "ii: use C++"
This reverts commit e915c4bef23dda5c79afafbe19c606ec37752cc7.

It seems that this reduces performance.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -116,7 +116,7 @@ repos:
           ?lib/grn_vector\.h|
           ?lib/h3\.c|
           ?lib/highlighter\.c|
-          ?lib/ii\.cpp|
+          ?lib/ii\.c|
           ?lib/index_column\.c|
           ?lib/language_model\.cpp|
           ?lib/load\.c|
