clang-format: add lib/grn_token.h

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -110,6 +110,7 @@ repos:
           ?lib/grn_store\.h|
           ?lib/grn_str\.h|
           ?lib/grn_table_selector\.h|
+          ?lib/grn_token\.h|
           ?lib/grn_token_cursor\.h|
           ?lib/grn_tokenizer\.h|
           ?lib/grn_tokenizers\.h|
