--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -129,37 +129,9 @@ jobs:
       # Release
       - name: Upload to release
         if: |
-          startsWith(github.ref, 'refs/tags/')
+          github.ref_type == 'tag'
         run: |
-          (cd doc/source/news && \
-           ruby \
-             -e 'print("## Groonga "); \
-                 puts(ARGF.read.split(/^## Release /)[1]. \
-                        gsub(/^\(.+\)=$/, ""). \
-                        gsub(/{doc}`(.+?)`/) { \
-                          id = $1; \
-                          title = id.split("\/").last; \
-                          path = id.delete_prefix("/"); \
-                          url = "https://groonga.org/docs/#{path}.html"; \
-                          "[#{title}](#{url})"; \
-                        }. \
-                        gsub(/{ref}`(.+?)`/) {$1}.
-                        strip)' \
-             $(ls *.md | sort --human-numeric-sort | tail -n1)) > \
-            release-note.md
-          echo "" >> release-note.md
-          echo "### Translations" >> release-note.md
-          echo "" >> release-note.md
-          version=${GITHUB_REF_NAME#v}
-          major_version=${version%%.*}
-          version_hyphen=$(echo ${version} | tr . -)
-          echo "  * [Japanese](https://groonga.org/ja/docs/news/${major_version}.html#release-${version_hyphen})" >> release-note.md
-          title="$(head -n1 release-note.md | sed -e 's/^## //')"
-          tail -n +2 release-note.md > release-note-without-version.md
-          gh release create ${GITHUB_REF_NAME} \
-            --discussion-category Releases \
-            --notes-file release-note-without-version.md \
-            --title "${title}" \
+          gh release upload ${GITHUB_REF_NAME} \
             groonga-*.tar.gz \
             groonga-*.zip
         env:
