ci deploy: release add deploy workflow to notify successful package upload
GitHub: https://github.com/groonga/packages.groonga.org/issues/43

This PR introduces a new release workflow. This release workflow
handdle the followings. We will implement it step by step.

- Create release page <- This PR is here.
- Upload the release artifacts to release page

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -309,3 +309,13 @@ jobs:
             --volume ${PWD}:/groonga:ro \
             ${TEST_DOCKER_IMAGE} \
             /groonga/packages/${TASK_NAMESPACE}/test.sh
+
+  release:
+    if: |
+      github.ref_type == 'tag'
+    needs: build
+    uses: ./.github/workflows/release.yml
+    with:
+      tag: ${{ github.ref_name }}
+    secrets:
+      token: ${{ secrets.GITHUB_TOKEN }}
