--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,12 +37,12 @@ jobs:
           echo "" >> release-note.md
           tag=${{ inputs.tag }}
           version=${tag#v}
-          major_version=${version%%.*}inputs.tag
+          major_version=${version%%.*}
           version_hyphen=$(echo ${version} | tr . -)
           echo "  * [Japanese](https://groonga.org/ja/docs/news/${major_version}.html#release-${version_hyphen})" >> release-note.md
           title="$(head -n1 release-note.md | sed -e 's/^## //')"
           tail -n +2 release-note.md > release-note-without-version.md
-          gh release create ${{ inputs.tag }} \
+          gh release create "${tag}" \
             --discussion-category Releases \
             --notes-file release-note-without-version.md \
             --title "${title}" || :
