--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,6 @@ jobs:
             *-amd64.tar.gz \
             *-arm64.tar.gz \
             *-x86_64.tar.gz \
-            *-aarch64.tar.gz \
+            *-aarch64.tar.gz
         env:
           GH_TOKEN: ${{ secrets.token }}
